--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,3 +13,4 @@
 @import "partials/edit-product";
 @import "partials/featured-products";
 @import "partials/edit-products";
+@import "partials/faves";
