--- a/sass/partials/_cart.scss
+++ b/sass/partials/_cart.scss
@@ -1,113 +1,117 @@
 .cart-empty-container {
-    margin: 0 auto;
-    text-align: center;
-    padding-bottom: 3rem;
+  margin: 0 auto;
+  text-align: center;
+  padding-bottom: 3rem;
 }
 
 .cart-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+
+  .cost-container {
+    margin-bottom: 4rem;
+  }
+
+  h1 {
+    width: 100%;
+    text-align: center;
+    margin: 0 0 2rem 0;
+  }
+
+  section {
+    width: 100%;
+    max-width: fit-content;
+    margin-top: 3rem;
+  }
+
+  .payment-wrapper {
     display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
+    justify-content: flex-end;
+    margin-bottom: 2rem;
+  }
 
-    .cost-container {
-        margin-bottom: 4rem;
+  .cart-items-container {
+    min-width: 55rem;
+    text-align: center;
+
+    @media only screen and (max-width: map-get($media-widths, mobile)) {
+      min-width: 100%;
     }
 
-    h1 {
-        width: 100%;
-        text-align: center;
-        margin: 0 0 2rem 0;
+    .cart-item,
+    .cart-item-input,
+    .cart-item-product-info {
+      display: flex;
+      height: fit-content;
+      align-items: center;
     }
 
-    section {
-        width: 100%;
-        max-width: fit-content;
-        padding: 0 2rem;
-        margin-top: 3rem;
-    }
+    .cart-item {
+      justify-content: space-between;
+      margin-bottom: 3rem;
 
-    .payment-wrapper {
+      @media only screen and (max-width: map-get($media-widths, mobile)) {
         display: flex;
-        justify-content: flex-end;
-        margin-bottom: 2rem;
-    }
+        flex-direction: column;
+      }
 
-    .cart-items-container {
-        min-width: 55rem;
-        text-align: center;
+      .cart-item-product-info {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: $border;
+        padding-bottom: 3rem;
 
         @media only screen and (max-width: map-get($media-widths, mobile)) {
-            min-width: 100%;
+          flex-wrap: wrap;
         }
 
-        .cart-item,
-        .cart-item-input,
-        .cart-item-product-info {
-            display: flex;
-            height: fit-content;
-            align-items: center;
+        div {
+          width: fit-content;
         }
 
-        .cart-item {
-            justify-content: space-between;
-            margin-bottom: 3rem;
+        .cart-img {
+          width: 10rem;
+          height: 10rem;
+          border-radius: 50%;
 
-            @media only screen and (max-width: map-get($media-widths, mobile)) {
-                display: flex;
-                flex-direction: column;
-            }
-
-            .cart-item-product-info {
-                width: 100%;
-                max-width: 30rem;
-                display: flex;
-
-                @media only screen and (max-width: map-get($media-widths, mobile)) {
-                    min-width: 100%;
-                    display: flex;
-                    justify-content: space-between;
-                }
-
-                div {
-
-                    @media only screen and (max-width: map-get($media-widths, mobile)) {
-                        min-width: 20rem;
-                    }
-                }
-
-                .cart-img {
-                    min-width: 10rem;
-                    min-height: 10rem;
-                    border-radius: 50%;
-                    margin-right: 2rem;
-                }
-
-                .cart-item-info-link-container {
-                    margin-top: 1rem;
-                }
-            }
-
-            .cart-item-input {
-                display: flex;
-                padding-left: 2rem;
-                justify-content: flex-end;
-
-                @media only screen and (max-width: map-get($media-widths, tablet)) {
-                    min-width: 20rem;
-                    padding: 0;
-                    align-self: flex-end;
-                    padding-right: 4rem;
-                }
-
-                .cart-item-price {
-                    margin-right: 2rem;
-                }
-
-                .cross {
-                    margin-left: 2rem;
-                    font-size: 2.3rem;
-                }
-            }
+          @media only screen and (max-width: map-get($media-widths, mobile)) {
+            width: 5rem;
+            height: 5rem;
+          }
         }
+      }
+
+      .cart-item-input {
+        display: flex;
+
+        @media only screen and (max-width: map-get($media-widths, small-mobile)) {
+          justify-content: flex-end;
+          flex: 100%;
+        }
+
+        * {
+          padding: 0 0.5rem;
+        }
+
+        .cart-item-price,
+        .cross {
+          margin: 0 0.5rem;
+        }
+
+        .cross {
+          font-size: 2.3rem;
+          cursor: pointer;
+        }
+
+        .quantity {
+          width: 4rem;
+          height: 4rem;
+          padding-left: 0.5rem;
+        }
+      }
     }
+  }
 }
