--- a/sass/partials/_edit-products.scss
+++ b/sass/partials/_edit-products.scss
@@ -1,22 +1,34 @@
 .delete-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  z-index: 999 !important;
+  background: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(3px);
+
+  .delete-container-inner {
     width: 100%;
-    height: 40rem;
-    background: map-get($colors, lightgrey);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: map-get($colors, white);
+    max-width: 60rem;
+    max-height: 50rem;
     box-shadow: $shadow;
-    border-bottom: $border;
+    border-radius: $border-radius;
+    border: $border;
     padding: 2rem;
-    text-align: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 999 !important;
+  }
 }
 
 .btn-go-back-container {
-    min-width: 100%;
-    display: flex;
+  min-width: 100%;
+  display: flex;
 
-    @media only screen and (max-width: map-get($media-widths, mobile)) {
-        justify-content: center;
-    }
+  @media only screen and (max-width: map-get($media-widths, mobile)) {
+    justify-content: center;
+  }
 }
